Dependabot: allow all dependency types for pip ecosystem

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -9,6 +9,8 @@ updates:
     schedule:
       interval: daily
   - package-ecosystem: pip
+    allow:
+      dependency-types: all
     directory: /
     schedule:
       interval: daily
