--- a/.github/workflows/build-helper-image.yaml
+++ b/.github/workflows/build-helper-image.yaml
@@ -23,6 +23,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Build the image
+        uses: docker/build-push-action@v6
+        with:
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          tags: ${{ env.image_name }}
+
       - name: Log in to GitHub container registry
         if: github.event_name == 'push'
         uses: docker/login-action@v3
@@ -31,14 +38,10 @@ jobs:
           password: ${{ github.token }}
           username: ${{ github.actor }}
 
-      - name: Build the image
-        uses: docker/build-push-action@v6
-        with:
-          tags: ${{ env.image_name }}
-
       - name: Push latest image to registry
         if: github.event_name == 'push'
         uses: docker/build-push-action@v6
         with:
+          cache-from: type=gha
           push: true
           tags: ${{ env.image_name }}:latest
