--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,5 @@
 [build-system]
-requires = [
-    "setuptools>=61.0.0",
-    "wheel>=0.37.0",
-]
+requires = ["setuptools>=77.0.3"]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -10,9 +7,9 @@ name = "datime"
 description = "Python package with convenience functions for dates, times, and intervals"
 readme = "README.md"
 requires-python = ">=3.9"
+license = "MIT"
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 dynamic = [
@@ -25,7 +22,8 @@ email = "william@subtlecoolness.com"
 
 [project.urls]
 "Homepage" = "https://github.com/williamjacksn/datime"
-"Bug Tracker" = "https://github.com/williamjacksn/datime/issues"
+"Changes" = "https://github.com/williamjacksn/datime/blob/main/CHANGES.md"
+"Issues" = "https://github.com/williamjacksn/datime/issues"
 
 [tool.setuptools.dynamic]
 version.attr = "datime.__version__"
