--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,10 @@
 [build-system]
-requires = ["setuptools>=77.0.3"]
-build-backend = "setuptools.build_meta"
+build-backend = "uv_build"
+requires = ["uv_build>=0.7.19,<0.8.0"]
 
 [project]
 name = "datime"
+version = "2025.0"
 description = "Python package with convenience functions for dates, times, and intervals"
 readme = "README.md"
 requires-python = ">=3.9"
@@ -11,9 +12,6 @@ license = "MIT"
 classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
-]
-dynamic = [
-    "version",
 ]
 
 [[project.authors]]
@@ -24,6 +22,3 @@ email = "william@subtlecoolness.com"
 "Homepage" = "https://github.com/williamjacksn/datime"
 "Changes" = "https://github.com/williamjacksn/datime/blob/main/CHANGES.md"
 "Issues" = "https://github.com/williamjacksn/datime/issues"
-
-[tool.setuptools.dynamic]
-version.attr = "datime.__version__"
